<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess The Sound</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="admob_publisher_id">ca-app-pub-8356404931736973/2001120391</string> <!-- Change AdMob Id -->
    <string name="admob_intertestial_id">ca-app-pub-8356404931736973/4633515992</string><!-- your admob intertestial ad id-->
    <string name="number_of_stage_ad">3</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://www.syriastore.sy/app/com.gkcrop.guessthesound</string>
    
    <!-- your facebook url -->
    <string name="facebook_url">http://facebook.com</string>
    
    
     <!-- Reset Dailog Message -->
    <string name="reset_msg">If you wish to restart your game, Please click Yes! or else click No!</string>
    <string name="reset_title">Restart your Game?</string>
    <string name="reset_yes">Yes</string>
    <string name="reset_no">No</string>
    <string name="reset_msg_1">CONGRATULATIONS!</string>
    <string name="reset_msg_2">Congratulations! You have completed this part of the game.\nDo not hesitate to come back later to play new levels.</string>
    <string name="you_must_turn_on_mobile_data">You must turn on mobile data</string>
    <string name="you_must_have_internet_access">You must have internet access</string>
    <string name="warning">Warning</string>
    
    <!-- Score Management -->
    <string name="how_much_for_first_letter">15</string><!-- how much point you set for use that hint -->
    <string name="how_much_for_bomb">25</string>
    <string name="how_much_for_skip">35</string>
    
    <string name="first_letter_msg_1">Do you want to discover 1st letter for 15 coins?</string>
    <string name="first_letter_msg_2">You must have 15 coins!</string>
    <string name="first_letter_msg_3">DISCOVER 1st LETTER!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    
    <string name="bomb_msg_1">Do you want to hide 3 letters for 25 coins?</string>
    <string name="bomb_msg_2">You must have 25 coins!</string>
    <string name="bomb_msg_3">HIDE 3 LETTERS!</string>
    
    <string name="skip_msg_1">Do you want to skip this question for 35 coins?</string>
    <string name="skip_msg_2">You must have 35 coins!</string>
    <string name="skip_msg_3">Skip Question!</string>
    
    <string name="point_give">1|10</string><!-- note that here 1 is indicate 1st stage and 10 is point so here we have 10 point already in that game for first start -->
    
    <string name="a">A</string>
    <string name="lets_play">Lets Play</string>
    <string name="ask">Ask</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="continue1">Continue</string>
    <string name="try_again">Try Again</string>
    <string name="_5" translatable="false">+5</string>

</resources>
