<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/white_style"
    android:orientation="vertical"
    android:weightSum="1.0"
    android:id="@+id/root">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="40.0dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#ff0fb8a1"
        android:padding="4.0dip" >

        <Button
            android:id="@+id/button1"
            android:layout_width="60.0dip"
            android:layout_height="30.0dip"
            android:textColor="#48cec0"
            android:text="@string/back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/round_rect_dark" />

        <TextView
            android:id="@+id/textView2"
            android:layout_toStartOf="@id/textView1"
            android:layout_toEndOf="@id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text=""
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14.0dip"
            android:text=""
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_publisher_id" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="vertical"
        android:weightSum="1.0"
        android:id="@+id/main">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txt_ribon"
                android:layout_alignParentTop="true"
                android:textColor="@color/blue"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>


            <RelativeLayout
                android:id="@+id/imageView1"
                android:layout_width="190.0dip"
                android:layout_height="190.0dip"
                android:layout_below="@+id/txt_ribon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15.0dip" >

                <Button
                    android:id="@+id/button8"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circleshape" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="100.0dip"
                    android:layout_height="100.0dip"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/mic" />
            </RelativeLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="55.0dip"
                android:layout_height="55.0dip"

                android:layout_alignBottom="@+id/imageView1"
                android:layout_alignParentStart="true"
                android:background="#6dc5f2"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/ask"
                android:visibility="visible" />

            <Button
                android:id="@+id/button5"
                android:layout_width="55.0dip"
                android:layout_height="55.0dip"
                android:layout_alignBottom="@+id/imageView1"
                android:layout_alignParentEnd="true"
                android:background="@drawable/removeletterhint" />

            <Button
                android:id="@+id/button3"
                android:layout_width="55.0dip"
                android:layout_height="55.0dip"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/imageView1"
                android:background="#6dc5f2"
                android:textSize="22sp"
                android:text="@string/skip"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="55.0dip"
                android:layout_height="55.0dip"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/imageView1"
                android:background="@drawable/bombhint" />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/world_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <GridLayout
                    android:id="@+id/g1"
                    ads:layout_constraintGuide_percent="0"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:id="@+id/g2"
                    ads:layout_constraintGuide_percent="0.167"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:id="@+id/g3"
                    ads:layout_constraintGuide_percent="0.334"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:id="@+id/g4"
                    ads:layout_constraintGuide_percent="0.501"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:id="@+id/g5"
                    ads:layout_constraintGuide_percent="0.668"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:id="@+id/g6"
                    ads:layout_constraintGuide_percent="0.835"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:id="@+id/g7"
                    ads:layout_constraintGuide_percent="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/char1"
                    ads:layout_constraintStart_toEndOf="@id/g1"
                    ads:layout_constraintEnd_toStartOf="@id/g2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char7"
                    ads:layout_constraintStart_toEndOf="@id/g1"
                    ads:layout_constraintEnd_toStartOf="@id/g2"
                    ads:layout_constraintTop_toBottomOf="@id/char1"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/char2"
                    ads:layout_constraintStart_toEndOf="@id/g2"
                    ads:layout_constraintEnd_toStartOf="@id/g3"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char8"
                    ads:layout_constraintStart_toEndOf="@id/g2"
                    ads:layout_constraintEnd_toStartOf="@id/g3"
                    ads:layout_constraintTop_toBottomOf="@id/char2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char3"
                    ads:layout_constraintStart_toEndOf="@id/g3"
                    ads:layout_constraintEnd_toStartOf="@id/g4"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char9"
                    ads:layout_constraintStart_toEndOf="@id/g3"
                    ads:layout_constraintEnd_toStartOf="@id/g4"
                    ads:layout_constraintTop_toBottomOf="@id/char3"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char4"
                    ads:layout_constraintStart_toEndOf="@id/g4"
                    ads:layout_constraintEnd_toStartOf="@id/g5"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char10"
                    ads:layout_constraintTop_toBottomOf="@id/char4"
                    ads:layout_constraintStart_toEndOf="@id/g4"
                    ads:layout_constraintEnd_toStartOf="@id/g5"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char5"
                    ads:layout_constraintStart_toEndOf="@id/g5"
                    ads:layout_constraintEnd_toStartOf="@id/g6"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char11"
                    ads:layout_constraintTop_toBottomOf="@id/char5"
                    ads:layout_constraintStart_toEndOf="@id/g5"
                    ads:layout_constraintEnd_toStartOf="@id/g6"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char6"
                    ads:layout_constraintStart_toEndOf="@id/g6"
                    ads:layout_constraintEnd_toStartOf="@id/g7"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/char12"
                    ads:layout_constraintTop_toBottomOf="@id/char6"
                    ads:layout_constraintStart_toEndOf="@id/g6"
                    ads:layout_constraintEnd_toStartOf="@id/g7"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wordbox"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="#ffffff"
                    android:textSize="32sp"
                    android:textStyle="bold" />


            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>